--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <div></div>
+    <p>Thank you Dovy Howitt</p>
     <script>
       (async () => {
         const response = await fetch('https://api.github.com/repos/judaschwartz/Cleveland-Davening-Times/contents/')
@@ -11,7 +13,7 @@
         }
 
         htmlString += '</ul>'
-        document.getElementsByTagName('body')[0].innerHTML = htmlString
+        document.querySelector('div').innerHTML = htmlString
       })()
     </script>
   <body>
